--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/png" href="https://github.com/stampylongr/vrv.js/raw/gh-pages/favicon.png">
+    <link rel="icon" type="image/png" href="https://static.vrv.co/vrvweb/assets/img/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="https://static.vrv.co/vrvweb/assets/img/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="https://static.vrv.co/vrvweb/assets/img/favicons/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" sizes="57x57" href="https://static.vrv.co/vrvweb/assets/img/favicons/apple-touch-icon-57x57.png">
+    <link rel="icon" sizes="60x60" href="https://static.vrv.co/vrvweb/assets/img/favicons/apple-touch-icon-60x60.png">
+    <link rel="icon" sizes="72x72" href="https://static.vrv.co/vrvweb/assets/img/favicons/apple-touch-icon-72x72.png">
+    <link rel="icon" sizes="76x76" href="https://static.vrv.co/vrvweb/assets/img/favicons/apple-touch-icon-76x76.png">
+    <link rel="icon" sizes="114x114" href="https://static.vrv.co/vrvweb/assets/img/favicons/apple-touch-icon-114x114.png">
+    <link rel="icon" sizes="120x120" href="https://static.vrv.co/vrvweb/assets/img/favicons/apple-touch-icon-120x120.png">
+    <link rel="icon" sizes="144x144" href="https://static.vrv.co/vrvweb/assets/img/favicons/apple-touch-icon-144x144.png">
+    <link rel="icon" sizes="152x152" href="https://static.vrv.co/vrvweb/assets/img/favicons/apple-touch-icon-152x152.png">
+    <link rel="icon" sizes="180x180" href="https://static.vrv.co/vrvweb/assets/img/favicons/apple-touch-icon-180x180.png">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/print.css' | relative_url }}" media="print">
     <!--[if lt IE 9]>
